--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -151,9 +151,9 @@ iframe {
 }
 
 .wrap-login100 {
-  width: 500px;
+  width: 450px;
   background: #fff;
-  border-radius: 10px;
+  border-radius: 20px;
   overflow: hidden;
 
   box-shadow: 0 3px 20px 0px rgba(0, 0, 0, 0.1);
@@ -329,14 +329,14 @@ input.input100 {
   align-items: center;
   padding: 0 20px;
   width: 100%;
-  height: 60px;
+  height: 40px;
   background-color: #4272d7;
 
   font-family: OpenSans-Regular;
   font-size: 14px;
   color: #fff;
   line-height: 1.2;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 
   -webkit-transition: all 0.4s;
   -o-transition: all 0.4s;
