--- a/src/main/webapp/resources/css/util.css
+++ b/src/main/webapp/resources/css/util.css
@@ -270,7 +270,7 @@
 .p-t-62 {padding-top: 62px;}
 .p-t-63 {padding-top: 63px;}
 .p-t-64 {padding-top: 64px;}
-.p-t-65 {padding-top: 65px;}
+.p-t-65 {padding-top: 20px;}/* 65 */
 .p-t-66 {padding-top: 66px;}
 .p-t-67 {padding-top: 67px;}
 .p-t-68 {padding-top: 68px;}
@@ -506,7 +506,7 @@
 .p-b-47 {padding-bottom: 47px;}
 .p-b-48 {padding-bottom: 48px;}
 .p-b-49 {padding-bottom: 49px;}
-.p-b-50 {padding-bottom: 50px;}
+.p-b-50 {padding-bottom: 20px;}/* 50 */
 .p-b-51 {padding-bottom: 51px;}
 .p-b-52 {padding-bottom: 52px;}
 .p-b-53 {padding-bottom: 53px;}
@@ -762,7 +762,7 @@
 .p-l-52 {padding-left: 52px;}
 .p-l-53 {padding-left: 53px;}
 .p-l-54 {padding-left: 54px;}
-.p-l-55 {padding-left: 55px;}
+.p-l-55 {padding-left: 20px;}/* 55 */
 .p-l-56 {padding-left: 56px;}
 .p-l-57 {padding-left: 57px;}
 .p-l-58 {padding-left: 58px;}
@@ -1013,7 +1013,7 @@
 .p-r-52 {padding-right: 52px;}
 .p-r-53 {padding-right: 53px;}
 .p-r-54 {padding-right: 54px;}
-.p-r-55 {padding-right: 55px;}
+.p-r-55 {padding-right: 20px;}/* 55 */
 .p-r-56 {padding-right: 56px;}
 .p-r-57 {padding-right: 57px;}
 .p-r-58 {padding-right: 58px;}
